# Pulsar

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  wasm-pkg.toml
.github/workflows/: build.yml  test.yml
core-host/src/: ai_inference.rs  browser_bridge.rs  kv_partition.rs
faas/: filters.json
faas/browser-agent/: Cargo.toml  README.md
faas/browser-agent/src/: lib.rs
faas/browser-agent/wit/: world.wit
faas/cognitive-gc/: Cargo.toml  README.md
faas/cognitive-gc/src/: lib.rs
faas/cognitive-gc/wit/: world.wit
faas/inference-gateway/: Cargo.toml  README.md
faas/inference-gateway/src/: lib.rs
faas/inference-gateway/wit/: world.wit
faas/orchestrator/: Cargo.toml  README.md
faas/orchestrator/fuzz/: Cargo.toml
faas/orchestrator/fuzz/fuzz_targets/: fuzz_command_lexer.rs  fuzz_pathguard.rs
faas/orchestrator/src/: lib.rs  sanitizer.rs
faas/orchestrator/wit/: world.wit
faas/skill-extractor/: Cargo.toml  README.md
faas/skill-extractor/src/: lib.rs
faas/skill-extractor/wit/: world.wit
faas/supervisor/: Cargo.toml  README.md
faas/supervisor/src/: lib.rs
faas/supervisor/wit/: world.wit
faas/viking-context/: Cargo.toml  README.md
faas/viking-context/src/: lib.rs
faas/viking-context/wit/: world.wit
openspec/changes/archive/2026-05-09-faas-viking-context/: design.md  tasks.md
openspec/changes/archive/2026-05-10-pulsar-cli-orchestrator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-cli-worktree-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-faas-inference-gateway/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-faas-orchestrator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-faas-skill-extractor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-pulsar-cli-thin-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-pulsar-vscode-web/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-autonomous-ui-testing/: design.md  tasks.md
openspec/changes/archive/2026-05-13-cognitive-gc/: tasks.md
openspec/changes/archive/2026-05-13-context-handshake/: tasks.md
openspec/changes/archive/2026-05-13-continuous-learning-pipeline/: design.md  tasks.md
openspec/changes/archive/2026-05-13-dynamic-skillpack-registry/: tasks.md
openspec/changes/archive/2026-05-13-human-action-bridge/: tasks.md
openspec/changes/archive/2026-05-13-lsp-hover-bridge/: design.md  tasks.md
openspec/changes/archive/2026-05-13-mcp-swarm-memory/: tasks.md
openspec/changes/archive/2026-05-13-rabbit-hole-detector/: design.md  tasks.md
openspec/changes/archive/2026-05-13-skill-retrieval-loop/: proposal.md  tasks.md
openspec/changes/archive/2026-05-13-swarm-supervisor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-token-killer-sanitization/: proposal.md  tasks.md
openspec/changes/archive/2026-05-13-viking-knowledge-graph/: design.md  proposal.md  tasks.md
openspec/changes/autonomous-ui-testing/: proposal.md  tasks.md
openspec/changes/cognitive-gc/: design.md  proposal.md  tasks.md
openspec/changes/cognitive-gc/specs/cognitive-gc/: spec.md
openspec/changes/context-handshake/: design.md  proposal.md  tasks.md
openspec/changes/continuous-learning-pipeline/: proposal.md  tasks.md
openspec/changes/dynamic-skillpack-registry/: design.md  proposal.md  tasks.md
openspec/changes/faas-viking-context/: design.md  proposal.md
openspec/changes/human-action-bridge/: design.md  proposal.md  tasks.md
openspec/changes/lsp-hover-bridge/: proposal.md  tasks.md
openspec/changes/mcp-swarm-memory/: design.md  proposal.md  tasks.md
openspec/changes/rabbit-hole-detector/: proposal.md  tasks.md
openspec/changes/skill-retrieval-loop/: design.md  tasks.md
openspec/changes/swarm-supervisor/: tasks.md
openspec/changes/token-killer-sanitization/: design.md  tasks.md
openspec/changes/viking-knowledge-graph/: design.md  proposal.md  tasks.md
openspec/changes/viking-searchable-index/: design.md  tasks.md
openspec/specs/ai-orchestration/: spec.md
openspec/specs/browser-automation/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/cli-thin-client/: spec.md
openspec/specs/cli-worktree/: spec.md
openspec/specs/cognitive-gc/: spec.md
openspec/specs/e2e-testing/: spec.md
openspec/specs/handshake/: spec.md
openspec/specs/human-bridge/: spec.md
openspec/specs/inference/: spec.md
openspec/specs/kiln-learning/: spec.md
openspec/specs/knowledge-graph/: spec.md
openspec/specs/lsp-bridge/: spec.md
openspec/specs/mcp-memory/: spec.md
openspec/specs/orchestrator/: spec.md
openspec/specs/orchestrator-security/: spec.md
openspec/specs/rabbit-hole/: spec.md
openspec/specs/rc1-remediation/: spec.md
openspec/specs/repository-hygiene/: spec.md
openspec/specs/security-fuzzing/: spec.md
openspec/specs/skill-extractor/: spec.md
openspec/specs/skill-retrieval/: spec.md
openspec/specs/skillpack-registry/: spec.md
openspec/specs/supervisor/: spec.md
openspec/specs/token-killer/: spec.md
openspec/specs/viking-context/: spec.md
openspec/specs/viking-search/: spec.md
openspec/specs/vscode-extension/: spec.md
openspec/specs/wasm-telemetry/: spec.md
pulsar-cli/: Cargo.toml
pulsar-cli-node/: README.md  package-lock.json  package.json  tsconfig.json
pulsar-cli-node/src/: git.ts  main.ts  protocol.ts  repl.ts  skillify.ts  tachyon-mesh-wormhole.d.ts  webdav.ts  wormhole.ts  ws-client.ts
pulsar-cli-node/src/__tests__/: git.test.ts  protocol.test.ts  skillify.test.ts  webdav.test.ts  wormhole.test.ts  ws-client.test.ts
pulsar-cli/src/: config.rs  git.rs  main.rs  mesh_client.rs  orchestrator.rs  protocol.rs  repl.rs  skillify.rs  webdav.rs  ws_client.rs
pulsar-vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
pulsar-vscode/src/: ChatViewProvider.ts  PulsarClient.ts  extension.ts  protocol.ts
src/: lib.rs
tests/: wasm_e2e_runner.rs
wit/ai/: inference.wit  kv-partition.wit
wit/browser/: cdp.wit
(+78 files in other folders)
