[workspace]
members = [
    "faas/browser-agent",
    "faas/cognitive-gc",
    "faas/inference-gateway",
    "faas/orchestrator",
    "faas/skill-extractor",
    "faas/supervisor",
    "faas/viking-context",
    "pulsar-cli",
]
default-members = [
    "faas/browser-agent",
    "faas/cognitive-gc",
    "faas/inference-gateway",
    "faas/orchestrator",
    "faas/skill-extractor",
    "faas/supervisor",
    "faas/viking-context",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
futures-util = "0.3"
hyper = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1"
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
wit-bindgen = "=0.43.0"

[profile.release]
opt-level = "s"
strip = true
