[package]
name = "pulsar-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "faas/browser-agent",
    "faas/cognitive-gc",
    "faas/inference-gateway",
    "faas/orchestrator",
    "faas/skill-extractor",
    "faas/supervisor",
    "faas/viking-context",
    "pulsar-cli",
]
default-members = [
    ".",
    "faas/browser-agent",
    "faas/cognitive-gc",
    "faas/inference-gateway",
    "faas/orchestrator",
    "faas/skill-extractor",
    "faas/supervisor",
    "faas/viking-context",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
futures-util = "0.3"
hyper = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1"
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
syn = { version = "2", features = ["full", "visit"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
wit-bindgen = "=0.43.0"

[dev-dependencies]
anyhow = { workspace = true }
orchestrator = { path = "faas/orchestrator" }
tempfile = "3"
test-log = "0.2"
wasmtime = "26.0.1"
wasmtime-wasi = "26.0.1"
wasi-preview1-component-adapter-provider = "29.0.1"
wit-component = "0.235.0"

[profile.release]
opt-level = "s"
strip = true
