[package]
name = "pulsar-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pulsar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# tonic: transport only — Protobuf stubs generated in a future change
tonic = { version = "0.12", default-features = false, features = ["transport"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rustyline = "14"
