[package]
name = "browser-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { workspace = true }

[package.metadata.component]
package = "tachyon:browser"

[package.metadata.component.dependencies]
"tachyon:browser" = "oci://ghcr.io/astorise/tachyon-mesh-wit:0.9.0-rc.1"
"tachyon:ai" = "oci://ghcr.io/astorise/tachyon-mesh-wit:0.9.0-rc.1"
"tachyon:mesh" = "oci://ghcr.io/astorise/tachyon-mesh-wit:0.9.0-rc.1"
