[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
supervisor = { path = "../supervisor" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { workspace = true }

[package.metadata.component]
package = "tachyon:ai"

[package.metadata.component.dependencies]
"tachyon:ai" = { package = "astorise:tachyon-mesh-wit", version = "0.9.0-rc.1", registry = "tachyon-mesh-wit" }
"tachyon:mesh" = { package = "astorise:tachyon-mesh-wit", version = "0.9.0-rc.1", registry = "tachyon-mesh-wit" }
