[package]
name = "supervisor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.43"

[profile.release]
opt-level = "s"
strip = true

[package.metadata.component]
package = "tachyon:ai"
