[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { workspace = true }

[package.metadata.component]
package = "tachyon:ai"

[package.metadata.component.dependencies]
"tachyon:ai" = { package = "astorise:tachyon-mesh-wit", version = "1.2.0-rc.1", registry = "tachyon-mesh-wit" }
"tachyon:mesh" = { package = "astorise:tachyon-mesh-wit", version = "1.2.0-rc.1", registry = "tachyon-mesh-wit" }
