[package]
name = "viking-context"
version = "0.1.0"
edition = "2024"

# cdylib  → WASM component artifact
# rlib    → allows `cargo test` to link a native test binary
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# syn is always needed: business logic runs on native for unit tests
syn = { version = "2", features = ["full", "visit"] }

# wit-bindgen is only required when targeting WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.43"

[profile.release]
opt-level = "s"
strip = true

[package.metadata.component]
package = "tachyon:ai"
