[package]
name = "viking-context"
version = "0.1.0"
edition = "2021"

# cdylib  → WASM component artifact
# rlib    → allows `cargo test` to link a native test binary
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# syn is always needed: business logic runs on native for unit tests
syn = { workspace = true }

# wit-bindgen is only required when targeting WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { workspace = true }

[package.metadata.component]
package = "tachyon:ai"

[package.metadata.component.dependencies]
"tachyon:ai" = "oci://ghcr.io/astorise/tachyon-mesh-wit:0.9.0-rc.1"
"tachyon:mesh" = "oci://ghcr.io/astorise/tachyon-mesh-wit:0.9.0-rc.1"
